@@ -43,6 +43,7 @@ Other changes:
  - gui: added support for nested manually-rendered objects (scroll frame inside scroll frame)
  - gui: added renderer::set_view() to allow arbitrary view transforms
  - gui: added color::from_hsv and color::to_hsv
+ - gui: added support for custom frame/layered_region factory functions
  - gui: renamed gui::manager_impl into gui::renderer
  - gui: renamed gui::gl::manager into gui::gl::renderer
  - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
